k8s-resource-manifests/tosca-smells/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tosca-smells
  namespace: sodalite-services
spec:
  selector:
    matchLabels:
      app: tosca-smells
  replicas: 1
  template:
    metadata:
      labels:
        app: tosca-smells
    spec:
      containers:
      - image: sodaliteh2020/toscasmells:349
        name: tosca-smells
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: "1G"
          requests:
            cpu: "0.25"
            memory: "256M"
