k8s-resource-manifests/tosca-smells/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosca-smells-ingress
  namespace: sodalite-services
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: "sodalite-services-force-https-middleware@kubernetescrd"
spec:
  rules:
    - host: tosca-smells.public-testbed.sodalite.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tosca-smells
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tosca-smells-ingress-tls
  namespace: sodalite-services
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
      - tosca-smells.public-testbed.sodalite.eu
    secretName: tosca-smells-cert
  rules:
    - host: tosca-smells.public-testbed.sodalite.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tosca-smells
                port:
                  number: 8080
